# tiktok-live-recorder

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
src/: __main__.py  chat.py  cli.py  config.py  gui.py  gui_constants.py  gui_dialogs.py  gui_main_window.py  gui_persistence.py  gui_task_card.py  gui_theme.py  gui_workers.py  models.py  notifications.py  overlay.py  rate_limiter.py  recorder.py  stream.py  subtitle.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_models.py  test_notifications.py  test_recorder.py  test_subtitle.py  test_utils.py
